# matrix-terminal

./: CMakeLists.txt  LICENSE  README.md  todo
include/: matrix.h
src/: main.cpp  matrix.cpp
